<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_roundcorner_white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tips_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:gravity="center"
        android:text="@string/tv_tips"
        android:textColor="@color/black_000"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:id="@+id/tv_tips_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_60"
        android:layout_marginRight="@dimen/px_60"
        android:background="@drawable/bg_bottom_wire_white"
        android:lineSpacingExtra="@dimen/px_10"
        android:lineSpacingMultiplier="1"
        android:text="@string/tv_tips_text"
        android:textColor="@color/gray_424242"
        android:textSize="@dimen/sp_15" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/px_40"
        android:textColor="@color/blue_0000ff"
        android:text="@string/checkbox"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_100"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tips_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_left_white"
            android:gravity="center"
            android:text="@string/tv_tips_cancel"
            android:textColor="@color/white_a1a1a1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_tips_okay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_dialog_right_white"
            android:gravity="center"
            android:text="@string/tv_tips_okay"
            android:textColor="@color/blue_42369a"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>