<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/white_d9d9d9" />

    <EditText
        android:id="@+id/et_czmm_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_bottom_wire_black"
        android:hint="@string/tv_print_tel_number"
        android:paddingTop="10dp"
        android:paddingBottom="4.5dp"
        android:text=""
        android:textColorHint="@color/white_d1d1d1"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/et_czmm_verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_bottom_wire_black"
            android:hint="@string/tv_print_verification_code"
            android:paddingTop="10dp"
            android:paddingBottom="4.5dp"
            android:text=""
            android:textColorHint="@color/white_d1d1d1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_czmm_verification"
            android:layout_width="60dp"
            android:layout_height="21dp"
            android:background="@drawable/bg_blue_round_corner_6f57ff"
            android:gravity="center"
            android:onClick="onViewClicked"
            android:singleLine="true"
            android:text="@string/tv_get_verification_code"
            android:textColor="@color/white_fff"
            android:textSize="10sp" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_czmm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_bottom_wire_black"
        android:hint="@string/et_new_password"
        android:paddingTop="10dp"
        android:paddingBottom="4.5dp"
        android:text=""
        android:textColorHint="@color/white_d1d1d1"
        android:textSize="12sp" />


    <EditText
        android:id="@+id/et_czmm_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_bottom_wire_black"
        android:hint="@string/tv_print_password_again"
        android:paddingTop="10dp"
        android:paddingBottom="4.5dp"
        android:text=""
        android:textColorHint="@color/white_d1d1d1"
        android:textSize="12sp" />

    <Button
        android:id="@+id/tv_czmm_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/bg_blue_round_corner_6f57ff"
        android:gravity="center"
        android:onClick="onViewClicked"
        android:text="@string/bt_commit"
        android:textColor="@color/white_fff"
        android:textSize="15sp" />
</LinearLayout>